Fixed dimensions on Mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1002,6 +1002,15 @@ input {
         row-gap: 3.75rem;
     }
 
+    .projects__item {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+    }
+    
+    .projects__img-wrapper {
+        height: 200px; /* Adjust this value as needed for mobile */
+    }
+
     .project__data{
         padding: 2rem 1.25rem 1.5rem 1.25rem;
     }
